--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main class="page-main">
     <div class="intro  intro--main">
       <div class="intro__wrapper">
-        <p>Взгляните на&nbsp;жизнь иначе!</p>
+        <h1>Взгляните на&nbsp;жизнь иначе!</h1>
       </div>
     </div>
     <div class="download-block">
