--- a/form.html
+++ b/form.html
@@ -148,5 +148,26 @@
       </div>
     </div>
   </footer>
+
+  <div class="popup  popup--wrong">
+    <div class="popup-title">
+      <nobr>Что-то</nobr> пошло не&nbsp;так!
+    </div>
+    <div class="popup__description">
+      <p>Проверьте поля, выделенные красным, скорее всего вы&nbsp;забыли их&nbsp;заполнить</p>
+    </div>
+    <button class="popup__btn" type="button">Ок</button>
+  </div>
+
+  <div class="popup  popup--wrong">
+    <div class="popup-title">
+      Ваш отзыв отправлен!
+    </div>
+    <div class="popup__description">
+      <p>Спасибо за&nbsp;ваше участие, ваш отзыв уже поступил к&nbsp;нам. В&nbsp;ближайшее время мы&nbsp;опубликуем его на&nbsp;сайте.</p>
+    </div>
+    <button class="popup__btn" type="button">Закрыть окно</button>
+  </div>
+
 </body>
 </html>
