--- a/photo.html
+++ b/photo.html
@@ -215,8 +215,8 @@
           </div>
           <div class="post-form__buttons">
             <div class="post-form__wrapper">
-             <input class="post-form__btn" type="submit" value="Запостить">
-             <button class="post-form__btn  post-form__btn--cansel" >Отмена</button>
+             <input class="transparent-btn" type="submit" value="Запостить">
+             <button class="transparent-btn  transparent-btn--gray" >Отмена</button>
            </div>
          </div>
        </form>
