--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
             <a class="main-nav__link" href="#">Фотографии</a>
           </li>
           <li class="main-nav__item">
-          <a class="main-nav__link" href="#">Конкурс</a>
+            <a class="main-nav__link" href="#">Конкурс</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="https://htmlacademy.ru/"><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</a>
@@ -40,102 +40,127 @@
       <div class="content-description">
         <div class="content-description__wrapper">
           <div class="content-description__text">
-            <p>Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000&nbsp;миль на&nbsp;вашу бонусную карту!</p>
+            <p>Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000&nbsp;миль на&nbsp;вашу бонусную карту! <span>Пожалуйста, заполните форму ниже:</span></p>
           </div>
         </div>
       </div>
       <form class="form" action="/echo" enctype="multipart/form-data" method="post">
-        <fieldset class="form__group">
-          <div class="form__wrapper">
-            <div class="form__fields">
-              <div class="form__entry-field">
-                <label class="form__label" for="first-name">Имя:</label>
-                <input class="form__field" type="text" id="first-name" placeholder="Введите ваше имя" name="first-name">
-              </div>
-              <div class="form__entry-field">
-                <label class="form__label" for="last-name">Фамилия:</label>
-                <input class="form__field" type="text" id="last-name" placeholder="Укажите фамилию" name="last-name">
-              </div>
-              <div class="form__entry-field">
-                <label class="form__label" for="patronymic">Отчество:</label>
-                <input class="form__field" type="text" id="patronymic" placeholder="Ну и отчество тоже" name="patronymic">
-              </div>
-            </div>
-          </div>
-        </fieldset>
-        <fieldset class="form__group  form__group--grey">
-          <div class="form__wrapper">
-            <legend class="form__group-title">Ваши безбашенные достижения в&nbsp;путешествии</legend>
-            <div class="form__fields">
-              <div class="form__entry-field  form__entry-field--switch">
-                <input class="form__field" type="checkbox" id="selfie" name="selfie" checked>
-                <label class="form__label" for="selfie">Сделал селфи с&nbsp;акулой</label>
-              </div>
-              <div class="form__entry-field  form__entry-field--switch">
-                <input class="form__field" type="checkbox" id="sunburn" name="sunburn" checked>
-                <label class="form__label" for="sunburn">Обгорел на&nbsp;пляже</label>
-              </div>
-              <div class="form__entry-field  form__entry-field--switch">
-                <input class="form__field" type="checkbox" id="chuck-norris" name="chuck-norris">
-                <label class="form__label" for="chuck-norris">Видел Чака Норриса</label>
-              </div>
-              <div class="form__entry-field  form__entry-field--switch">
-                <input class="form__field" type="checkbox" id="souvenirs" name="souvenirs">
-                <label class="form__label" for="souvenirs">Накупил сувениров</label>
-              </div>
-              <div class="form__entry-field  form__entry-field--switch">
-                <input class="form__field" type="checkbox" id="tower" name="tower" checked>
-                <label class="form__label" for="tower">Удержал башню</label>
-              </div>
-              <div class="form__entry-field  form__entry-field--switch">
-                <input class="form__field" type="checkbox" id="hotel" name="hotel">
-                <label class="form__label" for="hotel">Разгромил отель</label>
+        <div class="form__group-container">
+          <fieldset class="form__group  form__group--name-group">
+            <div class="form__wrapper">
+              <div class="form__fields">
+                <div class="form__entry-field">
+                  <label class="form__label" for="first-name">Имя:</label>
+                  <input class="form__field" type="text" id="first-name" placeholder="Введите ваше имя" name="first-name">
+                </div>
+                <div class="form__entry-field">
+                  <label class="form__label" for="last-name">Фамилия:</label>
+                  <input class="form__field" type="text" id="last-name" placeholder="Укажите фамилию" name="last-name">
+                </div>
+                <div class="form__entry-field">
+                  <label class="form__label" for="patronymic">Отчество:</label>
+                  <input class="form__field" type="text" id="patronymic" placeholder="Ну и отчество тоже" name="patronymic">
+                </div>
               </div>
             </div>
-          </div>
-        </fieldset>
-        <fieldset class="form__group">
-          <div class="form__wrapper">
-            <div class="form__entry-field">
-              <label class="form__label" for="phone-number">Номерок телефончика</label>
-              <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
-            </div>
-            <div class="form__entry-field">
-              <label class="form__label" for="email">Адресок почты</label>
-              <input class="form__field" type="email" id="email" placeholder="E-mail, пожалуйста" name="email">
-            </div>
-          </div>
-        </fieldset>
-        <fieldset class="form__group  form__group--grey">
-          <div class="form__wrapper">
-            <legend class="form__group-title">С&nbsp;каким приложением путешествовали?</legend>
-            <div class="form__fields">
-              <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
-                <input class="form__field" type="radio" id="ios" name="application" checked>
-                <label class="form__label" for="ios">Pink для iOS</label>
+          </fieldset>
+          <fieldset class="form__group  form__group--grey  form__group--border  form__group--achievements-group">
+            <div class="form__wrapper">
+              <div class="form__border-wrapper">
+                <div class="form__title-wrapper">
+                  <legend class="form__group-title">Ваши безбашенные достижения в&nbsp;путешествии</legend>
+                </div>
+                <div class="form__fields">
+                  <div class="form__entry-field  form__entry-field--switch">
+                    <input class="form__field" type="checkbox" id="selfie" name="selfie" checked>
+                    <label class="form__label" for="selfie">Сделал селфи с&nbsp;акулой</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch">
+                    <input class="form__field" type="checkbox" id="sunburn" name="sunburn" checked>
+                    <label class="form__label" for="sunburn">Обгорел на&nbsp;пляже</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch">
+                    <input class="form__field" type="checkbox" id="chuck-norris" name="chuck-norris">
+                    <label class="form__label" for="chuck-norris">Видел Чака Норриса</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch">
+                    <input class="form__field" type="checkbox" id="souvenirs" name="souvenirs">
+                    <label class="form__label" for="souvenirs">Накупил сувениров</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch">
+                    <input class="form__field" type="checkbox" id="tower" name="tower" checked>
+                    <label class="form__label" for="tower">Удержал башню</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch">
+                    <input class="form__field" type="checkbox" id="hotel" name="hotel">
+                    <label class="form__label" for="hotel">Разгромил отель</label>
+                  </div>
+                </div>
               </div>
-              <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
-                <input class="form__field" type="radio" id="android" name="application">
-                <label class="form__label" for="android">Pink на&nbsp;Android</label>
-              </div>
-              <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
-                <input class="form__field" type="radio" id="windows-phone" name="application">
-                <label class="form__label" for="windows-phone">Windows Phone</label>
+            </div>
+          </fieldset>
+          <fieldset class="form__group  form__group--border  form__group--contact-group">
+            <div class="form__wrapper">
+              <div class="form__border-wrapper">
+                <div class="form__title-wrapper">
+                  <legend class="form__group-title  form__group-title--hidden">
+                    Контактная информация
+                  </legend>
+                </div>
+                <div class="form__entry-field">
+                  <label class="form__label" for="phone-number">Номерок телефончика</label>
+                  <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
+                </div>
+                <div class="form__entry-field">
+                  <label class="form__label" for="email">Адресок почты</label>
+                  <input class="form__field" type="email" id="email" placeholder="E-mail, пожалуйста" name="email">
+                </div>
               </div>
             </div>
-          </div>
-        </fieldset>
-        <fieldset class="form__group">
-          <div class="form__wrapper">
-            <legend class="form__group-title">Опишите свои эмоции</legend>
-            <div class="form__entry-field  form__entry-field--textarea">
-              <textarea class="form__field" name="coment" id="comment-field" placeholder="Можно прям в красках, не стесняясь в выражениях" ></textarea>
+          </fieldset>
+          <fieldset class="form__group  form__group--grey  form__group--border  form__group--version-group">
+            <div class="form__wrapper">
+              <div class="form__border-wrapper">
+                <div class="form__title-wrapper">
+                  <legend class="form__group-title">С&nbsp;каким приложением путешествовали?</legend>
+                </div>
+                <div class="form__fields">
+                  <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
+                    <input class="form__field" type="radio" id="ios" name="application" checked>
+                    <label class="form__label" for="ios">Pink для iOS</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
+                    <input class="form__field" type="radio" id="android" name="application">
+                    <label class="form__label" for="android">Pink на&nbsp;Android</label>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
+                    <input class="form__field" type="radio" id="windows-phone" name="application">
+                    <label class="form__label" for="windows-phone">Windows Phone</label>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-        </fieldset>
+          </fieldset>
+          <fieldset class="form__group  form__group--border  form__group--emotions-group">
+            <div class="form__wrapper">
+              <div class="form__border-wrapper">
+                <div class="form__title-wrapper">
+                  <legend class="form__group-title">
+                    Опишите свои эмоции
+                  </legend>
+                </div>
+                <div class="form__entry-field  form__entry-field--textarea">
+                  <textarea class="form__field" name="coment" id="comment-field" placeholder="Можно прям в красках, не стесняясь в выражениях" ></textarea>
+                </div>
+              </div>
+            </div>
+          </fieldset>
+        </div>
         <div class="form__wrapper">
-          <input class="button" type="submit" value="Отправить форму">
-          <span class="form__hint"><span>*</span> &mdash;&nbsp; обязательные поля</span>
+          <div class="form__send-container">
+            <input class="button" type="submit" value="Отправить форму">
+            <span class="form__hint"><span>*</span> &mdash;&nbsp; обязательные поля</span>
+          </div>
         </div>
       </form>
     </main>
@@ -162,6 +187,8 @@
         <div class="popup__description">
           <p>Проверьте поля, выделенные красным, скорее всего вы&nbsp;забыли их&nbsp;заполнить</p>
         </div>
+      </div>
+      <div class="popup__btn-wrapper">
         <button class="button" type="button">Ок</button>
       </div>
     </div>
@@ -169,13 +196,13 @@
     <div class="popup  popup--success">
       <div class="popup__wrapper">
         <div class="popup__title">
-          Ваш отзыв отправлен!
+          Ваша заявка отправлена!
         </div>
         <div class="popup__description">
-          <p>Спасибо за&nbsp;ваше участие, ваша заявка уже поступила к&nbsp;нам. В&nbsp;ближайшее время мы&nbsp;рассмотрим ее и<br> оповестим вас.</p>
+          <p>Спасибо за&nbsp;ваше участие, ваша заявка уже поступила к&nbsp;нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
         </div>
       </div>
-      <div class="popup__wrapper  popup__wrapper--gray">
+      <div class="popup__btn-wrapper">
         <button class="button" type="button">Закрыть окно</button>
       </div>
     </div>
