--- a/form.html
+++ b/form.html
@@ -167,14 +167,16 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="logo  logo--extended">Pink</a>
-        <div class="social-links">
-          <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
-          <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
-          <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
-        </div>
-        <div class="page-footer__copyright">
-          <a class="page-footer__copyright-link" href="#">Разработано <span><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</span></a>
+        <div class="page-footer__container">
+          <a class="logo  logo--extended">Pink</a>
+          <div class="social-links">
+            <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
+            <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
+            <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
+          </div>
+          <div class="page-footer__copyright">
+            <a class="page-footer__copyright-link" href="#">Разработано <span><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</span></a>
+          </div>
         </div>
       </div>
     </footer>
