--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <div class="intro__wrapper">
           <h1 class="intro__text">Взгляните на&nbsp;жизнь иначе!</h1>
         </div>
-      </div>
-      <div class="download-block">
-        <div class="download-block__wrapper">
-          <a class="transparent-btn  transparent-btn--white" href="http://www.apple.com/ru/itunes/">Скачать приложение</a>
-          <div class="store-links">
-            <a class="store-links__link  store-links__link--apple" href="http://www.apple.com/ru/itunes/">iTunes</a>
-            <a class="store-links__link  store-links__link--android" href="https://play.google.com/store">Google Play</a>
-            <a class="store-links__link  store-links__link--microsoft" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone">Windows Phone Store</a>
-          </div>
-          <div class="download-block__text">
-            <p>Доступно для iPhone, iPad, Android, Windows Phone, OS&nbsp;X, Windows 8</p>
+        <div class="download-block">
+          <div class="download-block__wrapper">
+            <a class="transparent-btn  transparent-btn--white" href="http://www.apple.com/ru/itunes/">Скачать приложение</a>
+            <div class="store-links">
+              <a class="store-links__link  store-links__link--apple" href="http://www.apple.com/ru/itunes/">iTunes</a>
+              <a class="store-links__link  store-links__link--android" href="https://play.google.com/store">Google Play</a>
+              <a class="store-links__link  store-links__link--microsoft" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone">Windows Phone Store</a>
+            </div>
+            <div class="download-block__text">
+              <p>Доступно для iPhone, iPad, Android, Windows Phone, OS&nbsp;X, Windows 8</p>
+            </div>
           </div>
         </div>
       </div>
@@ -61,49 +61,67 @@
       </div>
       <div class="features-list">
         <div class="features-list__wrapper">
-          <section class="tell">
-            <h2 class="tell__title">Поднимает настроение</h2>
-            <div class="tell__text">
+          <section class="features-list__item">
+            <h2 class="features-list__title">Поднимает настроение</h2>
+            <div class="features-list__text">
               <p>Приложение позволит вам победить осеннюю хандру и&nbsp;деперессию буквально в&nbsp;несколько кликов!</p>
             </div>
           </section>
-          <section class="tell">
-            <h2 class="tell__title">Меняет мир вокруг</h2>
-            <div class="tell__text">
+          <section class="features-list__item">
+            <h2 class="features-list__title">Меняет мир вокруг</h2>
+            <div class="features-list__text">
               <p>Сделайте снимок и&nbsp;украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
             </div>
           </section>
-          <section class="tell">
-            <h2 class="tell__title">Заводит новых друзей</h2>
-            <div class="tell__text">
+          <section class="features-list__item">
+            <h2 class="features-list__title">Заводит новых друзей</h2>
+            <div class="features-list__text">
               <p>Ставьте лайки, комментируте, делитесь фотографиями с&nbsp;друзьями и&nbsp;заводите новых</p>
             </div>
           </section>
         </div>
       </div>
+      <section class="research">
+        <div class="research__wrapper">
+          <h2 class="research__title">Эффект на&nbsp;24 часа!</h2>
+          <div class="research__text">
+            <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
+          </div>
+          <a href="#" class="research__link">Узнать больше об&nbsp;исследовании</a>
+        </div>
+      </section>
       <div class="slider  slider--comment-slider">
         <div class="slider__wrapper">
           <div class="slider__slides">
             <div class="slider__slide">
-              <section class="tell">
-                <h2 class="tell__title">Николай Петров</h2>
-                <blockquote class="tell__text">
+              <section class="comment">
+                <h2 class="comment__title">
+                  <span class="comment__author">Николай Петров</span>
+                  <span class="comment__author-information">25 лет, водитель трамвая</span>
+                </h2>
+                <blockquote class="comment__text">
                   <p>&laquo;Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на&nbsp;привычные серые вещи! А&nbsp;еще я&nbsp;познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!&raquo;</p>
                 </blockquote>
               </section>
             </div>
             <div class="slider__slide">
-              <section class="tell">
-                <h2 class="tell__title">Николай Петров</h2>
-                <blockquote class="tell__text">
+              <section class="comment">
+                <h2 class="comment__title">
+                  <span class="comment__author">Николай Петров</span>
+                  <span class="comment__author-information">25 лет, водитель трамвая</span>
+                </h2>
+                <blockquote class="comment__text">
                   <p>&laquo;Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на&nbsp;привычные серые вещи! А&nbsp;еще я&nbsp;познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!&raquo;</p>
                 </blockquote>
               </section>
             </div>
             <div class="slider__slide">
-              <section class="tell">
-                <h2 class="tell__title">Николай Петров</h2>
-                <blockquote class="tell__text">
+              <section class="comment">
+                <h2 class="comment__title">
+                  <span class="comment__author">Николай Петров</span>
+                  <span class="comment__author-information">25 лет, водитель трамвая</span>
+                </h2>
+                <blockquote class="comment__text">
                   <p>&laquo;Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на&nbsp;привычные серые вещи! А&nbsp;еще я&nbsp;познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!&raquo;</p>
                 </blockquote>
               </section>
@@ -120,58 +138,91 @@
         </div>
       </div>
       <div class="slider  slider--versions-slider">
+        <input class="slider__switcher-input" type="radio" id="versions-slider-btn-1" name="versions-slider-toggle" checked>
+        <input class="slider__switcher-input" type="radio" id="versions-slider-btn-2" name="versions-slider-toggle">
+        <input class="slider__switcher-input" type="radio" id="versions-slider-btn-3" name="versions-slider-toggle">
+        <div class="slider__switcher">
+          <label class="slider__switcher-label" for="versions-slider-btn-1"></label>
+          <label class="slider__switcher-label" for="versions-slider-btn-2"></label>
+          <label class="slider__switcher-label" for="versions-slider-btn-3"></label>
+        </div>
         <table class="versions-table" border="1">
           <tr class="versions-table__header-row">
-            <th class="versions-table__header-cell  versions-table__header-cell--marker" colspan="2">
+            <th class="versions-table__header-cell  versions-table__header-cell--marker">
+            </th>
+            <th class="versions-table__header-cell  versions-table__header-cell--marker">
+              <span>База</span>
+              <span>3,99 USD</span>
+            </th>
+            <th class="versions-table__header-cell  versions-table__header-cell--marker">
               <span>Стандарт</span>
               <span>3,99 USD</span>
             </th>
+            <th class="versions-table__header-cell  versions-table__header-cell--marker">
+              <span>Анлим</span>
+              <span>3,99 USD</span>
+            </th>
+
           </tr>
           <tr class="versions-table__data-row">
             <td class="versions-table__data-cell">Розовый фильтр</td>
             <td class="versions-table__data-cell">+</td>
+            <td class="versions-table__data-cell">+</td>
+            <td class="versions-table__data-cell">+</td>
           </tr>
           <tr class="versions-table__data-row">
             <td class="versions-table__data-cell">Смайлики</td>
+            <td class="versions-table__data-cell">-</td>
+            <td class="versions-table__data-cell">+</td>
             <td class="versions-table__data-cell">+</td>
           </tr>
           <tr class="versions-table__data-row">
             <td class="versions-table__data-cell">Комментарии</td>
             <td class="versions-table__data-cell">-</td>
+            <td class="versions-table__data-cell">-</td>
+            <td class="versions-table__data-cell">+</td>
           </tr>
         </table>
-        <div class="slider__switcher">
-          <input class="slider__switcher-input" type="radio" id="versions-slider-btn-1" name="versions-slider-toggle" checked>
-          <label class="slider__switcher-label" for="versions-slider-btn-1"></label>
-          <input class="slider__switcher-input" type="radio" id="versions-slider-btn-2" name="versions-slider-toggle">
-          <label class="slider__switcher-label" for="versions-slider-btn-2"></label>
-          <input class="slider__switcher-input" type="radio" id="versions-slider-btn-3" name="versions-slider-toggle">
-          <label class="slider__switcher-label" for="versions-slider-btn-3"></label>
+      </div>
+
+      <div class="contacts-block">
+        <div class="contacts-block__wrapper">
+          <div class="contacts-block__header">
+            <p>Остались вопросы? Свяжитесь с&nbsp;нами!</p>
+          </div>
+          <div class="contacts-block__contacts">
+            <div class="contacts-block__contact">
+              <span class="contacts-block__contact-title">Звоните:</span>
+              <a class="contacts-block__contact-address" href="tel:+78125556666"><nobr>+7 (812) 555-66-66</nobr></a>
+            </div>
+            <div class="contacts-block__contact">
+              <span class="contacts-block__contact-title">Пишите:</span>
+              <a class="contacts-block__contact-address" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </div>
+            <div class="contacts-block__contact">
+              <span class="contacts-block__contact-title">Приезжайте в&nbsp;гости:</span>
+              <span class="contacts-block__contact-address">ул.&nbsp;Большая Конюшенная, 19/8</span>
+            </div>
+          </div>
+        </div>
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d840.3751722293583!2d30.320843466741838!3d59.936120064599706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f879780b7%3A0x267b6b7f4f614fb9!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDMxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1457108867986" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer  page-footer--index">
       <div class="page-footer__wrapper">
-        <div class="page-footer__contacts">
-          <div class="page-footer__header">
-            <p>Остались вопросы? Свяжитесь с&nbsp;нами!</p>
+        <div class="page-footer__container">
+          <a class="logo  logo--extended">Pink</a>
+          <div class="social-links">
+            <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
+            <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
+            <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
           </div>
-          <div class="page-footer__contact">
-            <span class="page-footer__contact-title">Звоните:</span>
-            <a class="page-footer__contact-address" href="tel:+78125556666"><nobr>+7 (812) 555-66-66</nobr></a>
-          </div>
-          <div class="page-footer__contact">
-            <span class="page-footer__contact-title">Пишите:</span>
-            <a class="page-footer__contact-address" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </div>
-          <div class="page-footer__contact">
-            <span class="page-footer__contact-title">Приезжайте в&nbsp;гости:</span>
-            <span class="page-footer__contact-address">ул.&nbsp;Большая Конюшенная, 19/8</span>
+          <div class="page-footer__copyright">
+            <a class="page-footer__copyright-link" href="#">Разработано <span><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</span></a>
           </div>
         </div>
-      </div>
-      <div class="map"><!--
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d840.3751722293583!2d30.320843466741838!3d59.936120064599706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f879780b7%3A0x267b6b7f4f614fb9!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDMxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1457108867986" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
       </div>
     </footer>
   </div>
